Remove unnecessary victory class.